tests/fixtures/bad/ParamsTypeBad3.php
<?php

namespace ParamsTypeBad3;

class A
{
	function test(array $a)
	{
	}
}


class B extends A
{
	function test(int $a)
	{
	}
}
